# Cardgame

./: .gitignore  CMakeLists.txt  Makefile  README.md  toolchain_windows.cmake
build_windows/: CMakeCache.txt  cmake_install.cmake
build_windows/dependencies/glad/: cmake_install.cmake
build_windows/dependencies/glfw/: cmake_install.cmake
build_windows/dependencies/glfw/src/: cmake_install.cmake
build_windows/dependencies/glm/: cmake_install.cmake
build_windows/dependencies/stb_image/: cmake_install.cmake
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glm/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
dependencies/stb_image/src/: stb_image.cpp
include/: cards.hpp  game.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  texture.hpp
res/shaders/: sprite_fragment.glsl  sprite_vertex.glsl
src/: cardgame.cpp  cards.cpp  game.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
